--- a/css/style.css
+++ b/css/style.css
@@ -1,49 +1,49 @@
-*,*:before, *:after {
-  box-sizing: border-box;
+
+.arrow-left{
+  background-color: #000000;
+  border: .5px solid #222;
+  margin-left: 20px;
+  margin-top: 30px;
+  padding: 20px;
+  width: 500px;
 }
 
 .location {
-  background-color: #aaa;
-  border: 5px solid #ff0000;
-  margin: 50px;
-  padding: 50px;
+  background-color: #fff;
+  border: .5px solid #222;
+  margin-left: 20px;
+  padding: 20px;
   width: 500px;
 /*   padding: 5px; */
-background-color: #aaa;
+background-color: #ccc;
 /*   border: 4px solid #fff; */
-float: left;
-margin: 3%;
-padding: 2%;
-width: 40%;
 }
 
 .location:hover {
-  background-color: #222;
+  background-color: #777;
 }
 
 h1 {
-  background-color: #ff0000;
   font-size: 2em;
   font-weight: 800;
   margin: 0;
-  text-align: center;
-  line-height: 200%;
-  color: #ffffff;
+  text-align: left;
+  line-height: 150%;
+  color: #black;
 }
 
 h3 {
   font-size: 1.5em;
   font-weight: 500;
   margin: 0;
-  text-align: center;
-  line-height: 200%;
-  background-color: #ff0000;
-  color: #ffffff;
+  text-align: left;
+  line-height: 100%;
+  color: #black;
 }
 
 .arrow {
 text-align: right;
-color: #ffffff;
+color: #black;
 }
 
 body {
@@ -57,8 +57,4 @@ nav.container {
   padding: 10px 0 15px 15px;
   position: fixed;
   width: 420px;
-}
-
-.restaurant-list {
-  padding-top: 50px;
 }
