updates with sam

--- a/css/style.css
+++ b/css/style.css
@@ -29,7 +29,7 @@ h1 {
   margin: 0;
   text-align: left;
   line-height: 150%;
-  color: #black;
+  color: black;
 }
 
 h3 {
@@ -38,15 +38,18 @@ h3 {
   margin: 0;
   text-align: left;
   line-height: 100%;
-  color: #black;
+  color: black;
 }
 
 .arrow {
-  float: center;
-  text-align: right;
-  color: #black;
-  margin-bottom: 25px;
-  margin-top: -25px;
+  display: inline-block;
+  color: black;
+  float:right;
+  margin-top: 15px;
+}
+
+.content {
+  display:inline-block;
 }
 
 body {
